--- a/SipayBootcampApi/PatikaSipayDotNetRestfulApi/PatikaSipayDotNet6RestfulApi.csproj
+++ b/SipayBootcampApi/PatikaSipayDotNetRestfulApi/PatikaSipayDotNet6RestfulApi.csproj
@@ -8,6 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Data\**" />
+    <Content Remove="Data\**" />
+    <EmbeddedResource Remove="Data\**" />
+    <None Remove="Data\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="CoreApiResponse" Version="1.0.1" />
     <PackageReference Include="EF.Core.Repository" Version="1.0.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="7.0.9" />
@@ -24,10 +31,6 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Data\" />
   </ItemGroup>
 
 </Project>
